fixed inner loop & added smart REPL